Implement part of header and language setup

--- a/modules/1-race-time-estimator/index.html
+++ b/modules/1-race-time-estimator/index.html
@@ -3,9 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <title>Race Time Estimator</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="demo.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
     <body>
+        <div id="race-time-estimator">
+            <div class="mrt-header">
+                <div class="mrt-title" data-i18n="title"> Race Time Estimator</div>
+                <ul class="mrt-header-links">
+                    <li><a class="mrt-links" href="https://running.moximoxi.net/">Store page</a></li>
+                </ul> 
+            </div>
+
+            <div class="mrt-content">
+                <div class="mrt-explanation">
+                    <div class="mrt-explain_title" data-i18n="explain_title"></div>
+                    <div class="mrt-explain" data-i18n="explain"></div>
+                </div>
+                <div class="mrt-calculator"></div>
+            </div>
+        </div>
+
+            
+
+
+
+        <script src="app.js"></script>
     </body>
 </html>
