--- a/modules/3-timeline-check/index.html
+++ b/modules/3-timeline-check/index.html
@@ -88,7 +88,8 @@
                         <span class="tc-row-value" id="tc-pace-low">— /km</span>
                     </div>
 
-                    <div class="tc-row">
+                    <!-- High row wrapper added (for hiding in advanced single-range mode) -->
+                    <div class="tc-row" id="tc-row-pace-high">
                         <span class="tc-row-label" id="tc-high-label">高估（提升 —%）</span>
                         <span class="tc-row-value" id="tc-pace-high">— /km</span>
                     </div>
@@ -105,7 +106,8 @@
                         <span class="tc-row-value" id="tc-remain-low">— 秒 / km</span>
                     </div>
 
-                    <div class="tc-row">
+                    <!-- High row wrapper added (for hiding in advanced single-range mode) -->
+                    <div class="tc-row" id="tc-row-remain-high">
                         <span class="tc-row-label">高估情况</span>
                         <span class="tc-row-value" id="tc-remain-high">— 秒 / km</span>
                     </div>
@@ -120,7 +122,8 @@
                         <span class="tc-row-value" id="tc-need-low">—</span>
                     </div>
 
-                    <div class="tc-row">
+                    <!-- High row wrapper added (for hiding in advanced single-range mode) -->
+                    <div class="tc-row" id="tc-row-need-high">
                         <span class="tc-row-label" id="tc-need-high-label">按高提升率（—%）</span>
                         <span class="tc-row-value" id="tc-need-high">—</span>
                     </div>
