Update Readme for AI usage

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <a href="./modules/1-race-time-estimator/index.html" class="tool-card">
-        打开：马拉松成绩预估
-    </a>
+    <a href="./modules/1-race-time-estimator/index.html" class="tool-card">Race time estimator</a>
+
+    <a href="./modules/2-goal-pace-converter/index.html" class="tool-card">Goal pace converter</a>
 </body>
 </html>
