Update index to link to all 3 completed modules and CSS

--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marathon Readiness Toolkit</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <a href="./modules/1-race-time-estimator/index.html" class="tool-card">Race time estimator</a>
+    <main class="container">
+        <header class="hero">
+            <h1>Marathon Readiness Toolkit</h1>
+            <p>
+                A set of runner-focused tools to help you understand
+                <strong>goal realism</strong>, <strong>timeline context</strong>,
+                and <strong>progress direction</strong> — without training plans or pressure.
+            </p>
+        </header>
 
-    <a href="./modules/2-goal-pace-converter/index.html" class="tool-card">Goal pace converter</a>
+        <section class="tools">
+            <a href="./modules/1-race-time-estimator/index.html" class="tool-card">
+                <h2>Race Time Estimator</h2>
+                <p class="question">
+                    “What marathon time range am I realistically capable of right now?”
+                </p>
+                <p class="desc">
+                    Estimates a realistic marathon time range based on recent race efforts.
+                </p>
+                <span class="cta">Open tool →</span>
+            </a>
+
+            <a href="./modules/2-goal-pace-converter/index.html" class="tool-card">
+                <h2>Goal Pace Converter</h2>
+                <p class="question">
+                    “What pace does my goal actually require?”
+                </p>
+                <p class="desc">
+                    Converts goal times into clear per-km and per-mile pace targets.
+                </p>
+                <span class="cta">Open tool →</span>
+            </a>
+
+            <a href="./modules/3-timeline-check/index.html" class="tool-card">
+                <h2>Pace Gap Reality Check</h2>
+                <p class="question">
+                    “Given my timeline, is this gap realistic?”
+                </p>
+                <p class="desc">
+                    Interprets the gap between current ability and goal pace using neutral,
+                    evidence-informed ranges.
+                </p>
+                <span class="cta">Open tool →</span>
+            </a>
+        </section>
+    </main>
 </body>
+
 </html>
