Refine Menu navigation and fix display for module 3

--- a/modules/1-race-time-estimator/index.html
+++ b/modules/1-race-time-estimator/index.html
@@ -8,6 +8,10 @@
     </head>
 
     <body>
+        <nav class="tool-nav">
+            <a href="../../index.html" class="tool-back">← Back to Navigation Menu</a>
+        </nav>
+        
         <div id="race-time-estimator">
             <div class="rte-card">
                 <label class="rte-row">
