--- a/modules/2-goal-pace-converter/index.html
+++ b/modules/2-goal-pace-converter/index.html
@@ -8,6 +8,11 @@
     </head>
 
     <body>
+        <nav class="tool-nav">
+            <a href="../../index.html" class="tool-back">← Back to Navigation Menu</a>
+        </nav>
+
+        
         <div id="goal-pace-converter">
             <form class="gpc-card" id="gpc-form">
                 
