--- a/modules/3-timeline-check/index.html
+++ b/modules/3-timeline-check/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <nav class="tool-nav">
+        <a href="../../index.html" class="tool-back">← Back to Navigation Menu</a>
+    </nav>
+
     <div id="timeline-check">
         <form class="tc-card" id="tc-form">
             <div class="tc-grid">
@@ -115,7 +119,7 @@
 
                 <!-- 4. Time needed -->
                 <div class="tc-section tc-highlight">
-                    <div class="tc-label" id="tc-label-window-3">如果 — 周仍未达到目标（粗略尺度）</div>
+                    <div class="tc-label" id="tc-label-window-3">如果 — 周内仍未达到目标，达到目标大约还需要多久？</div>
 
                     <div class="tc-row">
                         <span class="tc-row-label" id="tc-need-low-label">按低提升率（—%）</span>
@@ -139,6 +143,8 @@
             </div>
         </form>
     </div>
+
+
 
     <script src="app.js"></script>
 </body>
